# tracktour

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  stats
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: 010_env.txt
examples/: build_and_solve_ctc.ipynb  launch_napari_with_data.py  toy.py  viz_napari.ipynb
examples/sample_data/PhC-C2DL-PSC/: README.md
examples/sample_data/PhC-C2DL-PSC/02/: t000.tif  t001.tif  t002.tif  t003.tif  t004.tif  t005.tif  t006.tif  t007.tif  t008.tif  t009.tif  t010.tif  t011.tif  t012.tif  t013.tif  t014.tif  t015.tif  t016.tif  t017.tif  t018.tif  t019.tif  t020.tif  t021.tif  t022.tif  t023.tif  t024.tif  t025.tif  t026.tif  t027.tif  t028.tif  t029.tif  t030.tif  t031.tif  t032.tif  t033.tif  t034.tif  t035.tif  t036.tif  t037.tif  t038.tif  t039.tif  (+10 more)
examples/sample_data/PhC-C2DL-PSC/02_RES/: mask000.tif  mask001.tif  mask002.tif  mask003.tif  mask004.tif  mask005.tif  mask006.tif  mask007.tif  mask008.tif  mask009.tif  mask010.tif  mask011.tif  mask012.tif  mask013.tif  mask014.tif  mask015.tif  mask016.tif  mask017.tif  mask018.tif  mask019.tif  mask020.tif  mask021.tif  mask022.tif  mask023.tif  mask024.tif  mask025.tif  mask026.tif  mask027.tif  mask028.tif  mask029.tif  mask030.tif  mask031.tif  mask032.tif  mask033.tif  mask034.tif  mask035.tif  mask036.tif  mask037.tif  mask038.tif  mask039.tif  (+11 more)
src/tracktool/: __init__.py  _flow_graph.py  _graph_util.py  _io_util.py  _oracle.py  _viz_util.py  napari.yaml
src/tracktool/_napari/: _graph_conversion_util.py  _merge_explorer.py  _plugin.py  _solver.py  _track_editor.py
src/tracktour/: __init__.py  _costs.py  _features.py  _flow_graph.py  _geff_io.py  _graph_util.py  _io_util.py  _oracle.py  _tracker.py  _viz_util.py  cli.py  napari.yaml  scales.yaml
src/tracktour/_napari/: __init__.py  _edge_explorer.py  _graph_conversion_util.py  _gt_annotator.py  _merge_explorer.py  _read_write_tracks.py  _readers.py  _solver.py  _track_editor.py
src/tracktour/_napari/track_annotator/: __init__.py  commands.py  controller.py  precision.py  samplers.py  state.py  utils.py  widget.py
tests/: conftest.py  test_features.py  test_geff_io.py  test_re_solve.py  test_read_write.py  test_reader.py  test_samplers.py  test_track_annotator_commands.py  test_track_annotator_controller.py  test_track_annotator_state.py  test_track_annotator_utils.py  test_track_annotator_widget.py  test_tracker.py
