# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "tracktool"
description = "Network flow based tracker with guided error correction"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "ddoncila@gmail.com", name = "Draga Doncila Pop" },
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "igraph",
    "tqdm",
    "pandas",
    "gurobipy"
]

[tool.hatch.version]
path = "src/tracktool/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/DragaDoncila/tracktool"
repository = "https://github.com/DragaDoncila/tracktool"
